--- a/billing.html
+++ b/billing.html
@@ -216,21 +216,21 @@
     <header class="header">
       <div class="logo-container">
         <img src="src/logo.png" alt="Company Logo" class="logo" />
-        <h2>Stock Management</h2>
+        <h2>Billing Management</h2>
       </div>
       <nav class="nav">
-        <a href="#">Dashboard</a>
-        <a href="#" class="active">Billing</a>
-        <a href="#">Inventory</a>
+        <a href="dashboard.html">Dashboard</a>
+        <a href="billing.html">Billing</a>
+        <a href="stock.html">Inventory</a>
+        <a href="customer.html" class="active">Customers</a>
         <a href="#">Reports</a>
-        <a href="#">Settings</a>
       </nav>
     </header>
 
     <div class="container">
       <div class="page-header">
         <h1>Billing Management</h1>
-        <a href="#" class="btn">+ Create New Bill</a>
+        <a href="billingAdd.html" class="btn">+ Create New Bill</a>
       </div>
 
       <div class="search-bar">
@@ -260,7 +260,7 @@
             <td>$1,250.00</td>
             <td><span class="status status-paid">Paid</span></td>
             <td class="action-btns">
-              <button class="action-btn btn-secondary">View</button>
+              <a href="deliverynote.html" class="action-btn btn-secondary">View</a>
               <button class="action-btn btn">Edit</button>
               <button class="action-btn btn-danger">Delete</button>
             </td>
