--- a/customer.html
+++ b/customer.html
@@ -320,10 +320,10 @@
         <h2>Stock Management</h2>
       </div>
       <nav class="nav">
-        <a href="#">Dashboard</a>
-        <a href="#">Billing</a>
-        <a href="#">Inventory</a>
-        <a href="#" class="active">Customers</a>
+        <a href="dashboard.html">Dashboard</a>
+        <a href="billing.html">Billing</a>
+        <a href="stock.html">Inventory</a>
+        <a href="customer.html" class="active">Customers</a>
         <a href="#">Reports</a>
       </nav>
     </header>
@@ -331,7 +331,7 @@
     <div class="container">
       <div class="page-header">
         <h1>Customer Management</h1>
-        <button id="addCustomerBtn" class="btn">+ Add New Customer</button>
+        <button id="addCustomerBtn" class="btn" >+ Add New Customer</button>
       </div>
 
       <div class="search-bar">
