--- a/dashboard.html
+++ b/dashboard.html
@@ -242,7 +242,7 @@
         <a href="#">Dashboard</a>
         <a href="#" class="active">Calendar</a>
         <a href="#">Orders</a>
-        <a href="#">Customers</a>
+        <a href="customer.html">Customers</a>
         <a href="#">Reports</a>
       </nav>
     </header>
