--- a/dashboard.html
+++ b/dashboard.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
     <style>
       * {
         margin: 0;
@@ -230,10 +231,74 @@
         background-color: #3498db;
         color: white;
       }
+
+      .mobile-nav {
+        position: fixed;
+        top: 0;
+        left: -100%;
+        width: 250px;
+        height: 100%;
+        background-color: #fff;
+        box-shadow: 2px 0 8px rgba(0, 0, 0, 0.1);
+        transition: left 0.3s ease;
+        z-index: 1000;
+        padding: 20px;
+      }
+
+      .mobile-nav.active {
+        left: 0;
+      }
+
+      .close-btn {
+        display: flex;
+        justify-content: flex-end;
+        margin-bottom: 20px;
+        cursor: pointer;
+      }
+
+      .close-btn i {
+        font-size: 24px;
+        color: #333;
+      }
+
+      .mobile-nav-links {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+      }
+
+      .mobile-nav-links a {
+        color: #2c3e50;
+        text-decoration: none;
+        font-weight: 500;
+        padding: 8px 0;
+        border-bottom: 1px solid #eee;
+        transition: all 0.2s;
+      }
+
+      .mobile-nav-links a:hover {
+        color: #3498db;
+      }
+
+      
     </style>
+    <link rel="stylesheet" href="mob.css" />
   </head>
   <body>
     <header class="header">
+      <div class="mobile-nav" id="mobileNav">
+        <div class="close-btn" id="closeNav">
+          <i class="fa-solid fa-xmark"></i>
+        </div>
+        <nav class="mobile-nav-links">
+          <a href="#">Dashboard</a>
+          <a href="#" class="active">Calendar</a>
+          <a href="#">Orders</a>
+          <a href="customer.html">Customers</a>
+          <a href="#">Reports</a>
+        </nav>
+      </div>
+
       <div class="logo-container">
         <img src="src/logo.png" alt="Company Logo" class="logo" />
         <h2>Order Scheduling Dashboard</h2>
@@ -245,6 +310,11 @@
         <a href="customer.html">Customers</a>
         <a href="#">Reports</a>
       </nav>
+
+      <div class="menu-icon">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+      
     </header>
 
     <div class="container">
@@ -309,6 +379,20 @@
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
+        // Navigation menu toggle
+        const menuIcon = document.querySelector(".menu-icon");
+        const mobileNav = document.getElementById("mobileNav");
+        const closeNav = document.getElementById("closeNav");
+
+        menuIcon.addEventListener("click", function () {
+          mobileNav.classList.add("active");
+        });
+
+        closeNav.addEventListener("click", function () {
+          mobileNav.classList.remove("active");
+        });
+
+
         // Initialize calendar
         const calendarEl = document.getElementById("calendar");
         const calendar = new FullCalendar.Calendar(calendarEl, {
